# exchange-platform

./: .gitignore  README.md
backend/: .env  Cargo.toml  openapi.json
backend/src/: config.rs  errors.rs  main.rs  models.rs
backend/src/handlers/: health.rs  mod.rs  orders.rs
backend/src/services/: mod.rs  order_book_service.rs  order_service.rs
docs/: Development.md  Runbook.md  Swagger.md  Testing Strategy.md  Testing.md  Troubleshooting.md
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: Orders.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts
kubernetes/: api-deployment.yml  configmap.yml  frontend-deployment.yml  ingress.yml  namespace.yml  postgres-deployment.yml  redis-deployment.yml  secrets.yml
