[package]
name = "exchange-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"], optional = true }
redis = { version = "0.23", features = ["tokio-comp"], optional = true }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# WebSocket
actix-web-actors = "4.2"
actix = "0.13"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.32", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Metrics
prometheus = "0.13"
actix-web-prom = "0.6"

# OpenAPI/Swagger
utoipa = { version = "5.4", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

# Testing
cucumber = { version = "0.20", features = ["macros"] }
testcontainers = "0.15"

[features]
default = ["database"]
database = ["sqlx", "redis"]
mock = []

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "exchange-api"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 